<resources>
    <string name="app_name">ZapZap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_group">Novo grupo</string>
    <string name="search">Pesquisar</string>
    <string name="new_transmission">Nova transmissão</string>
    <string name="connected_devices">Aparelhos conectados</string>
    <string name="favorite_messages">Mensagens favoritas</string>
    <string name="payments">Pagamentos</string>
    <string name="settings">Configurações</string>
    <string name="chats">Conversas</string>
    <string name="status">Status</string>
    <string name="calls">Chamadas</string>
</resources>